username-distribution-app/base/username-distribution-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: get-a-username
  namespace: user-distribution
  labels:
    app: get-a-username
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: get-a-username
  template:
    metadata:
      labels:
        deployment: get-a-username
    spec:
      containers:
        - name: get-a-username
          image: 'quay.io/openshiftlabs/username-distribution:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
