username-distribution-app/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: user-distribution
spec:
  selector:
    name: redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
