username-distribution-app/base/username-distribution-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: get-a-username
  namespace: user-distribution
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    deployment: get-a-username
