username-distribution-app/base/username-distribution-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: get-a-username
  namespace: user-distribution
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: get-a-username
